alignment corrections

--- a/src/app/common/components/forms/profile-form/profile-form.component.css
+++ b/src/app/common/components/forms/profile-form/profile-form.component.css
@@ -8,21 +8,17 @@
     position: absolute;
     top: 20%;
     left:40%;
-    text-align: center;
 }
 
 input {
     text-align: center; 
 }
 
-/* button{
-    margin-left: 100px
-} */
-
-
-  img{
+img{
     max-width:180px;
   }
-  input[type=file]{
-  padding:10px;
-  opacity: 0}
+
+input[type=file]{
+padding:10px;
+opacity: 0
+}
